# nrf-test

./: Cargo.toml
.cargo/: config
src/: main.rs
