[package]
name = "embedded-training"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

[dependencies]
panic-halt  = "0.2"
cortex-m-rt = "0.6.5"
heapless    = "0.4.0"

[dependencies.dwm1001]
git = "https://github.com/ferrous-systems/rust-dwm1001.git"
rev = "january"
features = ["dev", "rt"]

[patch.crates-io]
nrf52832-hal = { git = "https://github.com/nrf-rs/nrf52-hal.git", rev = "fix-uarte" }
